syntax = "proto3";

package auth;

//import "user.proto";
import "google/protobuf/empty.proto";
//import "google/protobuf/timestamp.proto";

option go_package = "github.com/Roflan4eg/auth-serivce/internal/transport/grpc/pb";

service AuthService {

  rpc Register(RegisterRequest) returns (SessionResponse);

  rpc Login(LoginRequest) returns (SessionResponse);

  rpc Logout(LogoutRequest) returns (google.protobuf.Empty);

  rpc RefreshToken(RefreshTokenRequest) returns (SessionResponse);

  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);

//  rpc DeactivateUser(DeactivateUserRequest) returns (google.protobuf.Empty);

//  rpc GetSession(GetSessionRequest) returns (SessionResponse);
//
//  rpc RevokeSession(RevokeSessionRequest) returns (google.protobuf.Empty);
//
//  rpc RevokeAllSessions(RevokeAllSessionsRequest) returns (google.protobuf.Empty);
}

message SessionResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string password_confirm = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LogoutRequest {
  string access_token = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string session_id = 3;
  string error = 4;
}



